[package]
name = "rust_pi"
version = "0.1.0"
authors = ["Christoph Schulze <christoph.schulze@signavio.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustc-serialize = "*"
bincode = "*"
serde = "*"
serde_derive = "*"
flate2="*"